--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
     "scripts": {
         "start": "node ./bin/www",
         "devstart": "nodemon ./bin/www",
-        "serverstart": "SET DEBUG=vacation-app:* & npm run devstart"
+        "serverstart": "SET DEBUG=vacation-app:* & npm run devstart",
+        "tailwind": "npx tailwindcss -i ./public/stylesheets/style.css -o ./public/stylesheets/output.css --watch"
     },
     "dependencies": {
         "cookie-parser": "~1.4.4",
         "debug": "~2.6.9",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "express-async-handler": "^1.2.0",
+        "express-validator": "^7.0.1",
         "http-errors": "~1.6.3",
         "mongoose": "^7.1.0",
         "morgan": "~1.9.1",
